# lug-back

./: .env.sample  .gitignore  ANALYSIS_REPORT.md  BATCH_SERVICE_PORT_FALLBACK.md  BIDV_4664_FIX_SUMMARY.md  CLAUDE.md  ENHANCEMENT_SUMMARY.md  MBB_KLONLINE_Implementation_Summary.md  POS_LOCATION_EXTRACTION_IMPLEMENTATION.md  README.md  VCB_ENHANCEMENT_SUMMARY.md  __init__.py  benchmark_api.py  biostats1.csv  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  company_extraction_analysis.md  debug_3840_accounts.py  debug_company_extraction.py  debug_person_patterns.py  debug_regex.py  debug_vietnamese_person_name.py  enhancement_summary.md  main.py  pyproject.toml  test_4664_account_api_context.py  test_4664_account_fix.py  test_api_account_extraction.py  test_attachment_naming.py  test_bc_kl_fix.py  test_bc_kl_validation.py  test_cancel_reasons.py  test_crm_flow.py  test_filename_account_extraction.py  test_flow.py  test_mbb_klonline.py  test_mbb_klonline_comprehensive.py  test_mbb_priority_comprehensive.py  test_mbb_second_priority.py  (+12 more)
.lsp/.cache/: db.transit.json
src/: main.py
src/accounting/: .~lock.ACB T06.xlsx#  .~lock.BIDV 3840.ods#  .~lock.MBB T06.xlsx#  .~lock.danhmucdoituong.xls#  .~lock.danhmucmaypos.xlsx#  .~lock.danhmucmidvcb.xlsx#  .~lock.processed_result.xlsx#  .~lock.processed_result_1.xlsx#  .~lock.processed_result_2.xlsx#  .~lock.processed_result_4.xlsx#  BIDV 3840.ods  BIDV 3840.xlsx  README.md  README_transaction_rules.md  VCB T06 2025t.xlsx  VCB example.xlsx  VCB_IMPLEMENTATION_SUMMARY.md  __init__.py  _banks.json  acb_statement_example.xlsx  advanced_functions.py  api.py  bank_configs.py  bank_statement_converter.py  bank_statement_processor.py  bank_statement_reader.py  banking_enterprise.db  banking_enterprise.db-shm  banking_enterprise.db-wal  banks.json  correct_indentation_block.txt  counterparty_extractor.py  create_embedding.py  create_index.py  create_index_new.py  danhmucbophan.xls  danhmucdoituong.xls  danhmuckhoanmuc.xls  danhmucmaypos.xlsx  danhmucmidvcb.xlsx  (+39 more)
src/api/: __init__.py  server.bak.py  server.py
tests/: test_filter_negative_records.py  test_filter_negative_records_live.py
(+61 files in other folders)
