[project]
name = "lug-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dask>=2025.2.0",
    "fastapi>=0.115.8",
    "litestar>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
