[project]
name = "lug-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "dask>=2025.2.0",
    "fastapi>=0.115.8",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "litestar>=2.14.0",
    "loguru>=0.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "phonenumbers>=8.13.55",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sentry-sdk>=2.27.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["ruff>=0.11.8"]
