[project]
name = "lug-back"
version = "0.2.0"
description = "Lug Data Server"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "apprise>=1.9.6",
    "celery[redis]>=5.5.2",
    "dask>=2025.2.0",
    "fastapi>=0.115.8",
    "fastembed>=0.7.0",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "levenshtein>=0.27.1",
    "libsql-experimental>=0.0.54",
    "litestar>=2.14.0",
    "loguru>=0.7.2",
    "openpyxl>=3.1.5",
    "pandas[excel,html,performance]>=2.2.3",
    "phonenumbers>=8.13.55",
    "pyarrow>=19.0.0",
    "pylimbo>=0.0.20",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "sentry-sdk[celery,fastapi]>=2.27.0",
    "tantivy>=0.24.0",
    "uv>=0.7.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["basedpyright>=1.29.1", "ruff>=0.11.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
